.antlr/TableroParser.java
// Generated from c:/Users/facuf/Desktop/Analizador_real/Tablero.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TableroParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, OPERADOR=31, 
		BOOLEANO=32, NUMERO=33, CADENA=34, IDENTIFICADOR=35, WS=36;
	public static final int
		RULE_programa = 0, RULE_elemento = 1, RULE_fuente = 2, RULE_tipo_fuente = 3, 
		RULE_metrica = 4, RULE_agregacion = 5, RULE_grafico = 6, RULE_tipo_grafico = 7, 
		RULE_filtro = 8, RULE_alerta = 9, RULE_campo = 10, RULE_valor = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "elemento", "fuente", "tipo_fuente", "metrica", "agregacion", 
			"grafico", "tipo_grafico", "filtro", "alerta", "campo", "valor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'tablero'", "'{'", "'}'", "'fuente'", "'tipo'", "'ruta'", "';'", 
			"'csv'", "'json'", "'sql'", "'metrica'", "'='", "'('", "')'", "'suma'", 
			"'promedio'", "'maximo'", "'minimo'", "'contar'", "'grafico'", "'usar'", 
			"'barras'", "'lineas'", "'torta'", "'tabla'", "'filtro'", "'alerta'", 
			"'si'", "'entonces'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "OPERADOR", "BOOLEANO", "NUMERO", 
			"CADENA", "IDENTIFICADOR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Tablero.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TableroParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(TableroParser.IDENTIFICADOR, 0); }
		public TerminalNode EOF() { return getToken(TableroParser.EOF, 0); }
		public List<ElementoContext> elemento() {
			return getRuleContexts(ElementoContext.class);
		}
		public ElementoContext elemento(int i) {
			return getRuleContext(ElementoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			match(T__0);
			setState(25);
			match(IDENTIFICADOR);
			setState(26);
			match(T__1);
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 202377232L) != 0)) {
				{
				{
				setState(27);
				elemento();
				}
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(33);
			match(T__2);
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementoContext extends ParserRuleContext {
		public FuenteContext fuente() {
			return getRuleContext(FuenteContext.class,0);
		}
		public MetricaContext metrica() {
			return getRuleContext(MetricaContext.class,0);
		}
		public GraficoContext grafico() {
			return getRuleContext(GraficoContext.class,0);
		}
		public FiltroContext filtro() {
			return getRuleContext(FiltroContext.class,0);
		}
		public AlertaContext alerta() {
			return getRuleContext(AlertaContext.class,0);
		}
		public ElementoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elemento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterElemento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitElemento(this);
		}
	}

	public final ElementoContext elemento() throws RecognitionException {
		ElementoContext _localctx = new ElementoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_elemento);
		try {
			setState(41);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				fuente();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				metrica();
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 3);
				{
				setState(38);
				grafico();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 4);
				{
				setState(39);
				filtro();
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 5);
				{
				setState(40);
				alerta();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuenteContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(TableroParser.IDENTIFICADOR, 0); }
		public Tipo_fuenteContext tipo_fuente() {
			return getRuleContext(Tipo_fuenteContext.class,0);
		}
		public TerminalNode CADENA() { return getToken(TableroParser.CADENA, 0); }
		public FuenteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fuente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterFuente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitFuente(this);
		}
	}

	public final FuenteContext fuente() throws RecognitionException {
		FuenteContext _localctx = new FuenteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fuente);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(T__3);
			setState(44);
			match(IDENTIFICADOR);
			setState(45);
			match(T__4);
			setState(46);
			tipo_fuente();
			setState(47);
			match(T__5);
			setState(48);
			match(CADENA);
			setState(49);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_fuenteContext extends ParserRuleContext {
		public Tipo_fuenteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_fuente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterTipo_fuente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitTipo_fuente(this);
		}
	}

	public final Tipo_fuenteContext tipo_fuente() throws RecognitionException {
		Tipo_fuenteContext _localctx = new Tipo_fuenteContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo_fuente);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetricaContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(TableroParser.IDENTIFICADOR, 0); }
		public AgregacionContext agregacion() {
			return getRuleContext(AgregacionContext.class,0);
		}
		public CampoContext campo() {
			return getRuleContext(CampoContext.class,0);
		}
		public MetricaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metrica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterMetrica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitMetrica(this);
		}
	}

	public final MetricaContext metrica() throws RecognitionException {
		MetricaContext _localctx = new MetricaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_metrica);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(T__10);
			setState(54);
			match(IDENTIFICADOR);
			setState(55);
			match(T__11);
			setState(56);
			agregacion();
			setState(57);
			match(T__12);
			setState(58);
			campo();
			setState(59);
			match(T__13);
			setState(60);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AgregacionContext extends ParserRuleContext {
		public AgregacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agregacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterAgregacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitAgregacion(this);
		}
	}

	public final AgregacionContext agregacion() throws RecognitionException {
		AgregacionContext _localctx = new AgregacionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_agregacion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1015808L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GraficoContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(TableroParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(TableroParser.IDENTIFICADOR, i);
		}
		public Tipo_graficoContext tipo_grafico() {
			return getRuleContext(Tipo_graficoContext.class,0);
		}
		public GraficoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grafico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterGrafico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitGrafico(this);
		}
	}

	public final GraficoContext grafico() throws RecognitionException {
		GraficoContext _localctx = new GraficoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_grafico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(T__19);
			setState(65);
			match(IDENTIFICADOR);
			setState(66);
			match(T__1);
			setState(67);
			match(T__4);
			setState(68);
			match(T__11);
			setState(69);
			tipo_grafico();
			setState(70);
			match(T__6);
			setState(71);
			match(T__20);
			setState(72);
			match(T__11);
			setState(73);
			match(IDENTIFICADOR);
			setState(74);
			match(T__6);
			setState(75);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_graficoContext extends ParserRuleContext {
		public Tipo_graficoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_grafico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterTipo_grafico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitTipo_grafico(this);
		}
	}

	public final Tipo_graficoContext tipo_grafico() throws RecognitionException {
		Tipo_graficoContext _localctx = new Tipo_graficoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo_grafico);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 62914560L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FiltroContext extends ParserRuleContext {
		public CampoContext campo() {
			return getRuleContext(CampoContext.class,0);
		}
		public TerminalNode OPERADOR() { return getToken(TableroParser.OPERADOR, 0); }
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public FiltroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filtro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterFiltro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitFiltro(this);
		}
	}

	public final FiltroContext filtro() throws RecognitionException {
		FiltroContext _localctx = new FiltroContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_filtro);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__25);
			setState(80);
			campo();
			setState(81);
			match(OPERADOR);
			setState(82);
			valor();
			setState(83);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlertaContext extends ParserRuleContext {
		public TerminalNode IDENTIFICADOR() { return getToken(TableroParser.IDENTIFICADOR, 0); }
		public TerminalNode OPERADOR() { return getToken(TableroParser.OPERADOR, 0); }
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public TerminalNode CADENA() { return getToken(TableroParser.CADENA, 0); }
		public AlertaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alerta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterAlerta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitAlerta(this);
		}
	}

	public final AlertaContext alerta() throws RecognitionException {
		AlertaContext _localctx = new AlertaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_alerta);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__26);
			setState(86);
			match(T__27);
			setState(87);
			match(IDENTIFICADOR);
			setState(88);
			match(OPERADOR);
			setState(89);
			valor();
			setState(90);
			match(T__28);
			setState(91);
			match(CADENA);
			setState(92);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CampoContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(TableroParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(TableroParser.IDENTIFICADOR, i);
		}
		public CampoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterCampo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitCampo(this);
		}
	}

	public final CampoContext campo() throws RecognitionException {
		CampoContext _localctx = new CampoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_campo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(IDENTIFICADOR);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__29) {
				{
				{
				setState(95);
				match(T__29);
				setState(96);
				match(IDENTIFICADOR);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValorContext extends ParserRuleContext {
		public TerminalNode CADENA() { return getToken(TableroParser.CADENA, 0); }
		public TerminalNode NUMERO() { return getToken(TableroParser.NUMERO, 0); }
		public TerminalNode BOOLEANO() { return getToken(TableroParser.BOOLEANO, 0); }
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).enterValor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TableroListener ) ((TableroListener)listener).exitValor(this);
		}
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_valor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 30064771072L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}